--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,23 @@ table {
 	border-spacing: 0;
 }
 		/********Main settings********/
-
+.wrap {
+	padding: 0 20px;
+}
+.section-uptitle {
+	color: #ff6d6d;
+	text-transform: uppercase;
+	font-weight: 500;
+}
+.section-title {
+	color: #282828;
+	font-size: 40px;
+	font-weight: 500;
+}
+.section-text{
+	color: rgba(40, 40, 40, 0.56);
+	font-weight: 500;
+}
 /*
 
     font-family: 'Lato', sans-serif;
@@ -110,5 +126,61 @@ body {
 	margin-bottom: 40px;
 }
 .header-link {
+	text-decoration: none;
+	font-family: 'Exo';
+	font-weight: 400;
+	text-transform: uppercase;
 	display: block;
+	width: 190px;
+	height: 50px;
+	font-size: 16px;
+	color: #fff;
+	background-color: #ff6d6d;
+	line-height: 50px;
+	margin: 0 auto;
+	border-radius: 3px;
+	margin-bottom: 20px;
+}
+.header-text-with-note {
+	color: rgba(40, 40, 40, 0.56);
+	font-weight: 400;
+}
+.header-text-with-note:before {
+	display: inline-block;
+	content: '\274B';
+	font-size: 8px;
+	vertical-align: super;
+	margin-right: 3px;
+}
+
+		/***platforms***/
+.platforms .wrap{
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	padding-right: 0;
+}
+.platforms .section-uptitle {
+	margin-bottom: 15px;
+}
+.platforms .section-title {
+	margin-bottom: 45px;
+}
+.platforms-text {
+	margin-bottom: 20px;
+}
+.platforms-text-block {
+	padding-top: 190px;
+	flex: 1;
+	text-align: left;
+	margin-right: 150px;
+}
+.platforms-img-block {
+	flex: 1;
+	background-color: #ededed;
+	background: -webkit-linear-gradient(45deg, rgba(255, 109, 109, .8));
+	background: -o-linear-gradient(45deg, rgba(255, 109, 109, .8));
+	background: linear-gradient(45deg, rgba(255, 109, 109, .8));
 }
