--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ table {
 	color: #ff6d6d;
 	text-transform: uppercase;
 	font-weight: 500;
+	letter-spacing: 2px;
 }
 .section-title {
 	color: #282828;
@@ -83,24 +84,22 @@ body {
 
 					/**Top section**/
 .header {
-	min-height: 815px;
-	position: relative;
-	text-align: center;
+	
 }
 .header-video{
-	height: 100%;
-	width: 100%;
-	object-fit: cover;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
+	overflow: hidden;
+	min-height: 100%;
+	min-width: 100%;
+	height: auto;
+	width: auto;	
 }
 
 
 .header-video-wrap {
-	position: relative;
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	transform: translate(-50%);
 	text-align: center;
 	padding-top: 225px;
 }
@@ -155,6 +154,7 @@ body {
 
 		/***platforms***/
 .platforms {
+	position: relative;
 }
 .platforms .wrap{
 	display: -webkit-flex;
@@ -182,6 +182,7 @@ body {
 }
 .platforms-img-block {
 	width: 550px;
+	flex: 1;
 	background-color: #ededed;
 	background: -webkit-linear-gradient(150deg, #ededed 65%, rgb(255, 109, 109) 30%);
 	background: -o-linear-gradient(150deg, #ededed 65%, rgb(255, 109, 109) 30%);
@@ -195,8 +196,6 @@ body {
 	-webkit-background-size: cover;
 	background-size: cover;
 	position: relative;
-	top: -60px;
-	z-index: -1;
 	padding: 140px 0 185px 0;
 	text-align: center;
 }
@@ -234,3 +233,291 @@ body {
 	color: rgba(40, 40, 40, 0.56);
 	line-height: 26px;
 }
+
+		/**Resposive***/
+
+.resposive {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+
+}
+.resposive-img {
+	margin-right: 50px;
+	text-align: center;
+	padding: 95px 0;
+	flex: 1;
+	background: linear-gradient(to top right, rgb(255, 109, 109) 50%, #fff 50%);
+}
+
+.resposive-text-block {
+	text-align: left;
+	flex: 1;
+	padding-top: 140px;
+}
+.resposive-uptitle {
+	margin-bottom: 25px;
+}
+.resposive-title {
+	max-width: 420px;
+	margin-bottom: 35px;
+}
+.resposive-title:after {
+	content: '....';
+	color: #ff6d6d;
+}
+.resposive-text {
+	max-width: 500px;
+	color: rgba(40, 40, 40, 0.56);
+	font-family: 'Exo';
+	font-weight: 500;
+	font-size: 16px;
+}
+
+		/*****Partners****/
+
+.partners {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	-moz-flex-direction: column;
+	-ms-flex-direction: column;
+	-o-flex-direction: column;
+	flex-direction: column;
+	background: url(../img/partners-bg.png);
+	padding: 110px 0;
+}
+.feedback-block {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	max-width: 1440px;
+	justify-content: center;
+	margin: 0 auto;
+	margin-bottom: 110px;
+}
+.feedback-block-cart {
+	margin-right: 67px;
+	text-align: center;
+}
+.feedback-block-cart-logo {
+	height: 76px;
+	width: 76px;
+	margin: 0 auto;
+	background-color: #4e4e5e;
+	border: 2px solid #1d1e24;
+	margin-bottom: 25px;
+}
+.feedback-block-cart-name {
+	font-size: 22px;
+	color: #fff;
+	margin-bottom: 12px;
+}
+.feedback-block-cart-prof {
+	color: #ff6d6d;
+	margin-bottom: 37px;
+}
+.feedback-block-cart-text {
+	font-weight: 400;
+	line-height: 26px;
+	font-style: italic;
+	color: #fff;
+	opacity: .5;
+	max-width: 325px;
+}
+.sponsors-block {
+	text-align: center;
+}
+
+		/***Browser***/
+.browser {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-webkit-flex-direction: column;
+	-moz-flex-direction: column;
+	-ms-flex-direction: column;
+	-o-flex-direction: column;
+	flex-direction: column;
+	justify-content: center;
+	text-align: center;
+	padding: 110px 0;
+	padding-bottom: 0;
+	background-color: #f6f5f3;
+}
+.browser-uptitle {
+	margin-bottom: 15px;
+}
+.browser-title {
+	margin-bottom: 50px;
+}
+.browser-text {
+	max-width: 650px;
+	margin: 0 auto;
+	color: #282828;
+	line-height: 26px;
+	opacity: .6;
+	font-weight: 500;
+	margin-bottom: 95px;
+}
+.browser-picture {
+	max-width: 820px;
+	margin: 0 auto;
+	max-height: 375px;
+}
+/*****reg****/
+.reg {
+	padding: 110px 0;
+	text-align: center;
+	background-color: #323969;
+}
+.reg-uptitle {
+	margin-bottom: 15px;
+}
+.reg-title {
+	color: #fff;
+	margin-bottom: 95px;
+	letter-spacing: 1px;
+}
+.reg-title:after {
+	content: '...';
+	font-size: 40px;
+	margin-left: 15px;
+	letter-spacing: 3px;
+}
+.reg-form {
+	margin-bottom: 50px;
+}
+.reg-form-item {
+	width: 263px;
+	background-color: #444b78;
+	height: 50px;
+	border: 1px solid #fff;
+	border-radius: 3px;
+	margin-right: 30px;
+	padding: 18px 29px;
+	opacity: .5;
+	color: #fff;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.reg-form-item::placeholder {
+	text-transform: uppercase;
+	color: #fff;
+}
+.reg-form-btn {
+	position: relative;
+	margin-right: 0;
+	height: 50px;
+	width: 260px;
+	background-color: #ff6d6d;
+	outline: none;
+	border: 1px solid #ff6d6d;
+	border-radius:3px;
+	color: rgb(246, 245, 243);
+	text-transform: uppercase;
+	cursor: pointer;
+	box-shadow: 0px 3px 3px 0px rgba(14, 15, 15, 0.25);
+}
+.reg-form-btn:before {
+	content: url(../img/note.png);
+	top: -60px;
+	left: 0;
+	position: absolute;
+}
+.reg-undertext {
+	color: #f6f5f3;
+	opacity: .5;
+	font-weight: 400;
+}
+.reg-link {
+	color: #f6f5f3;
+
+}
+/*****footer******/
+.footer {
+	text-align: center;
+	background: linear-gradient(210deg , #ff6d6d 20%, #fff 20%);
+	vertical-align: top;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.footer .footer-block-area {
+	padding: 100px 0;
+	vertical-align: top;
+}
+.footer-block {
+	display: inline-block;
+	text-align: left;
+	margin: 0;
+	max-width: 231px;
+	margin-right: 67px;
+}
+.block-title:nth-child(1) {
+	font-family: 'Lato';
+	font-weight: 400;
+	color: #282828;
+	font-size: 27px;
+	margin-bottom: 30px;
+}
+.polygon-bg {
+	background: url(../img/polygon.png) 7px 5px no-repeat;
+	padding: 10px;
+	color: #fff;
+}
+.block-title {
+	font-size: 22px;
+	color: #282828;
+	font-family: 'Exo';
+}
+.footer-link {
+	display: block;
+	line-height: 30px;
+	text-decoration: none;
+	color: #282828;
+	opacity: .5;
+	font-weight: 400;
+}
+.address-text {
+	color: #282828;
+	opacity: .5;
+	line-height: 30px;
+}
+
+
+		/*Adaptive*/
+/*@media screen and (min-width: 1400px) {
+	.header-video-wrap {
+		top: 20%;
+	}
+	.header-title {
+		font-size: 160px;
+		color: #8BF13C;
+		max-width: none;
+		margin-bottom: 100px;
+	}
+	.play-btn {
+		height: 116px;
+		width: 116px;
+		line-height: 116px;
+		font-size: 40px;
+		margin-bottom: 100px;
+	}
+	.header-link {
+		width: 380px;
+		height: 100px;
+		line-height: 100px;
+		font-size: 24px;
+	}
+}*/
