--- a/css/style.css
+++ b/css/style.css
@@ -87,21 +87,19 @@ body {
 	
 }
 .header-video{
-	overflow: hidden;
-	min-height: 100%;
-	min-width: 100%;
-	height: auto;
-	width: auto;	
+	width: 100%;
+	position: relative;
 }
 
 
 .header-video-wrap {
+	height: 100%;
+	padding-top: 200px;
 	position: absolute;
-	top: 10%;
+	top: 0;
 	left: 50%;
 	transform: translate(-50%);
 	text-align: center;
-	padding-top: 225px;
 }
 .header-title {
 	margin: 0 auto;
@@ -237,12 +235,14 @@ body {
 		/**Resposive***/
 
 .resposive {
+}
+.resposive .wrap {
+	padding-left: 0;
 	display: -webkit-flex;
 	display: -moz-flex;
 	display: -ms-flex;
 	display: -o-flex;
 	display: flex;
-
 }
 .resposive-img {
 	margin-right: 50px;
@@ -455,14 +455,13 @@ body {
 }
 .footer .footer-block-area {
 	padding: 100px 0;
-	vertical-align: top;
 }
 .footer-block {
 	display: inline-block;
 	text-align: left;
 	margin: 0;
-	max-width: 231px;
 	margin-right: 67px;
+	vertical-align: top;
 }
 .block-title:nth-child(1) {
 	font-family: 'Lato';
@@ -493,11 +492,59 @@ body {
 	color: #282828;
 	opacity: .5;
 	line-height: 30px;
+	max-width: 231px;
+}
+.newsletter-input {
+	width: 211px;
+	height: 49px;
+	border: 1px solid #4e4e5e;
+	border-radius: 3px 0 0 3px;
+	border-right: none;
+	background-color:  rgba(141, 141, 141, 0.2);
+	opacity: .4;
+	padding-left: 30px;
+	margin-bottom: 20px;
+}
+.newsletter-input::placeholder {
+	font-size: 16px;
+	text-transform: uppercase;
+	color: #282828;
+	opacity: .5;
+}
+.newsletter-btn {
+	border-radius: 0 3px 3px 0;
+	vertical-align: top;
+	outline: none;
+	border: none;
+	height: 53px;
+	width: 52px;
+	background-color: #ff6d6d;
+	cursor: pointer;
+	box-shadow: 0px 3px 3px 0px rgba(14, 15, 15, 0.25);
+}
+.social-link-block {
+	text-align: center;
+}
+.social-link {
+	margin-right: 25px;
+	font-size: 17px;
+	color: #282828;
+	opacity: .5;
+}
+.social-link:last-child {
+	margin-right: 0;
+	margin-left: -5px;
 }
 
 
+
 		/*Adaptive*/
-/*@media screen and (min-width: 1400px) {
+@media screen and (min-width: 320px) and (max-width: 600px) {
+	.platforms-img-block {
+		display: none;
+	}
+}
+@media screen (min-width: 1400px) {
 	.header-video-wrap {
 		top: 20%;
 	}
@@ -520,4 +567,4 @@ body {
 		line-height: 100px;
 		font-size: 24px;
 	}
-}*/
+}
