--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,8 @@ body {
 }
 
 					/**Top section**/
-.header {
-	
+.mobile-menu {
+	display: none;
 }
 .header-video{
 	width: 100%;
@@ -542,6 +542,9 @@ body {
 
 		/*Adaptive*/
 @media screen and (min-width: 320px) and (max-width: 600px) {
+	.mobile-menu {
+		display: block;
+	}
 	.main-menu {
 		height: 100vh;
 	}
@@ -650,33 +653,74 @@ body {
 		padding: 50px 0;
 		
 	}
-}
-@media screen and (min-width: 601px) and (max-width: 1000px){
-	.mobile-menu {
+	.reg {
+		padding: 50px 0;
+	}
+	.reg-form-item {
+		width: 100%;
+		margin-bottom: 5px;
+		margin-right: 0;
+	}
+	.reg-form-item:nth-child(3){
+		margin-bottom: 15px;
+	}
+	.reg-form-btn {
+		width: 100%;
+	}
+	.reg-form-btn:before {
+		display: none;
+	}
+	.footer {
+		background: none;
+	}
+	.footer-block-area {
+		padding: 50px 0;
+	}
+	.footer-block {
+		margin-right: 0;
+		display: block;
+		text-align: center;
+		margin-bottom: 20px;
+	}
+	.address-text {
+		margin: 0 auto;
+	}
+	.newsletter {
+		margin-bottom: 0;
+	}
+	.support,
+	.about {
 		display: none;
 	}
 }
-@media screen and (min-width: 1400px) {
+@media screen and (min-width: 601px) and (max-width: 1000px){
 	.header-video-wrap {
-		top: 20%;
+		padding-top: 5%;
 	}
 	.header-title {
-		font-size: 160px;
-		color: #8BF13C;
-		max-width: none;
-		margin-bottom: 100px;
+		font-size: 25px;
+		margin-bottom: 15px;
 	}
 	.play-btn {
-		height: 116px;
-		width: 116px;
-		line-height: 116px;
-		font-size: 40px;
-		margin-bottom: 100px;
+		height: 40px;
+		width: 40px;
+		line-height: 40px;
+		font-size: 15px;
+	} 
+}
+@media screen and (min-width: 1001px) and (max-width: 1400px;){
+	.header-video-wrap {
+		padding-top: 5%;
 	}
-	.header-link {
-		width: 380px;
-		height: 100px;
-		line-height: 100px;
-		font-size: 24px;
+	.header-title {
+		font-size: 25px;
+		margin-bottom: 15px;
 	}
+	.play-btn {
+		height: 40px;
+		width: 40px;
+		line-height: 40px;
+		font-size: 15px;
+	} 
+
 }
